# test_graph_skill

./: .gitignore  README.md  SKILL.md  constitution.md  initial-spec.md  reference.md  skill-manager.toml
project_sdk_sources/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
project_sdk_sources/build-logic/: build.gradle.kts  settings.gradle.kts
project_sdk_sources/build-logic/src/main/kotlin/com/hayden/testgraphsdk/: GraphAssembler.kt  GraphModel.kt  MiniJson.kt  NodeDescribeLoader.kt  TestGraphSpec.kt  Toolchain.kt  ValidationGraphExtension.kt  ValidationGraphPlugin.kt  ValidationNodeSpec.kt  ValidationRuntime.kt
project_sdk_sources/build-logic/src/main/kotlin/com/hayden/testgraphsdk/exec/: Context.kt  Executors.kt  JBangExecutor.kt  PlanExecutor.kt  TimeoutParser.kt  UvExecutor.kt
project_sdk_sources/build-logic/src/main/kotlin/com/hayden/testgraphsdk/tasks/: InspectionTasks.kt  RunReportWriter.kt  RunTestGraphTask.kt  (+1 more)
project_sdk_sources/examples/: README.md
project_sdk_sources/gradle/wrapper/: gradle-wrapper.properties
project_sdk_sources/sdk/java/: build.gradle.kts
project_sdk_sources/sdk/python/: pyproject.toml
project_sdk_sources/sdk/python/src/testgraphsdk/: __init__.py  context.py  context_item.py  node_spec.py  procs.py  result.py  runner.py
project_sdk_sources/sources/: AppRunning.java  LoginSmoke.java  NetworkPingable.java  user_seeded.py
scripts/: _common.py  clean.py  discover.py  new-jbang-node.py  new-uv-node.py  run.py  scaffold.py
templates/: jbang-node.java.template  uv-node.py.template
tickets/: scala-runner.md
(+12 files in other folders)
