[project]
name = "testgraphsdk"
version = "0.1.0"
description = "Tiny SDK for Python validation-graph nodes (uv runtime)."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testgraphsdk"]
